lab_02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-02
spec:
  selector:
    app: lab-02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
